[SVN] r2417 Cinema - Heroku in /Projects/Cinema/ [FIX] Overlapping header and content on mobile

--- a/Heroku/frontend/src/planner/styles/planner.css
+++ b/Heroku/frontend/src/planner/styles/planner.css
@@ -26,8 +26,8 @@ input[type="checkbox"] {
 
 /** Site layout */
 #main > header {
-	height: 39px;
 	border-bottom: 1px solid white;
+	padding: 4px 0;
 }
 
 #cinemas, #films, #performances, #debug {
